--- a/prezentacja/01.html
+++ b/prezentacja/01.html
@@ -62,6 +62,7 @@
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            height: 67rem; /* Increased from h-96 (24rem) by 50% */
         }
         .map-image {
             width: 100%;
