--- a/prezentacja/08.html
+++ b/prezentacja/08.html
@@ -64,6 +64,7 @@
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            height: 36rem; /* Increased from h-96 (24rem) by 50% */
         }
         .musician-image {
             width: 100%;
