--- a/prezentacja/07.html
+++ b/prezentacja/07.html
@@ -193,6 +193,32 @@
               moderna
             </div>
           </div>
+          
+          <!-- Additional Image 1 -->
+          <div class="musician-container mt-6 h-64">
+            <img
+              alt="Festival de las Bolas de Candela - uczestnicy"
+              class="musician-image"
+              src="https://page.gensparksite.com/slides_images/festival_bolas_candela.jpg"
+            />
+          </div>
+          <div class="mt-2 text-center text-sm text-gray-300">
+            <div>Uczestnicy Festiwalu de las Bolas de Candela</div>
+            <div>Participantes del Festival de las Bolas de Candela</div>
+          </div>
+          
+          <!-- Additional Image 2 -->
+          <div class="musician-container mt-6 h-64">
+            <img
+              alt="Tradycyjne tańce podczas festiwalu"
+              class="musician-image"
+              src="https://page.gensparksite.com/slides_images/tradicional_danza.jpg"
+            />
+          </div>
+          <div class="mt-2 text-center text-sm text-gray-300">
+            <div>Tradycyjne tańce podczas festiwalu</div>
+            <div>Danzas tradicionales durante el festival</div>
+          </div>
         </div>
       </div>
     </div>
