--- a/prezentacja/07.html
+++ b/prezentacja/07.html
@@ -137,40 +137,72 @@
             <div>Festival de las Bolas de Candela</div>
             <div class="text-sm">El Maestro del Ritmo Caribeño</div>
           </div>
-          <!-- Biography Section -->
-          <div class="content-section">
-            <div class="subtitle flex items-center justify-between"></div>
-            <div class="text-content mb-2">
-              El festival de la Candela es una celebración cultural en El Carmen
-              de Bolívar, Colombia, en honor a la patrona, la Virgen del Carmen.
-              La festividad es una mezcla de tradiciones católicas e influencias
-              indígenas, africanas y criollas.
-            </div>
-            <div class="language-label">Polski (PL)</div>
-            <div class="text-content mb-2"></div>
-            <div class="language-label">Español (ES)</div>
-            <div class="text-content">
-              La Manda La "manda" es un voto o promesa hecha a la santa, que
-              implica actos de automortificación. Los devotos demuestran su
-              devoción mediante rituales y sacrificios, como cargar a la santa
-              sobre sus hombros, llevar velas en la cabeza y dejar que la cera
-              caliente gotee sobre su piel.
-            </div>
-          </div>
           <!-- Legacy Section -->
           <div class="content-section">
             <div class="subtitle flex items-center justify-between">
-              <div><i class="fas fa-crown music-note"></i>Dziedzictwo</div>
+              <div>Festiwal Kul Ognia</div>
               <div class="text-sm">El Festival</div>
             </div>
             <div class="language-label">Polski (PL)</div>
-            <div class="text-content mb-2"></div>
+            <div class="text-content mb-2">
+                Festiwal de la Candela to święto kulturalne obchodzone w El Carmen de Bolívar, w Kolumbii, ku czci patronki — Matki Boskiej z Carmen. Uroczystość stanowi połączenie tradycji katolickich oraz wpływów rdzennych, afrykańskich i kreolskich.
+            </div>
             <div class="language-label">Español (ES)</div>
             <div class="text-content">
-              Durante el festival, hombres y mujeres se reúnen para tocar música
-              y bailar frente a la iglesia. Algunos participantes gatean de
-              rodillas hasta que sus ropas se rasgan y su piel sangra, como forma
-              de pago a la santa.
+                El festival de la Candela es una celebración cultural en El Carmen de Bolívar, Colombia, en honor a la patrona, la Virgen del Carmen. La festividad es una mezcla de tradiciones católicas e influencias indígenas, africanas y criollas.
+            </div>
+          </div>
+
+          <!-- Third Section -->
+          <div class="content-section">
+            <div class="subtitle flex items-center justify-between">
+              <div><i class="fas fa-fire music-note"></i>La Manda</div>
+              <div class="text-sm">La Manda</div>
+            </div>
+            <div class="language-label">Polski (PL)</div>
+            <div class="text-content mb-2">
+                Manda to ślub lub obietnica złożona świętej, obejmująca akty umartwienia. Wierni okazują swoją pobożność poprzez rytuały i ofiary, takie jak niesienie figury świętej na ramionach, noszenie świec na głowie czy pozwalanie, aby gorący wosk kapał na ich skórę.
+            </div>
+            <div class="language-label">Español (ES)</div>
+            <div class="text-content">
+                La "manda" es un voto o promesa hecha a la santa, que implica actos de automortificación. Los devotos demuestran su devoción mediante rituales y sacrificios, como cargar a la santa sobre sus hombros, llevar velas en la cabeza y dejar que la cera caliente gotee sobre su piel.
+            </div>
+          </div>
+
+          <!-- Fourth Section -->
+          <div class="content-section">
+            <div class="subtitle flex items-center justify-between">
+              <div>Kule ognia</div>
+              <div class="text-sm">Bolas de Candela</div>
+            </div>
+            <div class="language-label">Polski (PL)</div>
+            <div class="text-content mb-2">
+                Bolas de candela (kule ognia) to unikalna tradycja, która narodziła się pewnej ciemnej nocy, gdy ludzie tworzyli kule ognia, aby oświetlić procesję. Dziś mężczyźni, kobiety i dzieci gromadzą się na centralnym placu, by bawić się kulami ognia podczas festiwalu trwającego siedem dni w lipcu.
+            </div>
+            <div class="language-label">Español (ES)</div>
+            <div class="text-content">
+                
+                Las bolas de candela son una tradición única que se originó en una noche oscura, cuando la gente creaba bolas de fuego para guiar una procesión. Hoy, hombres, mujeres y niños se reúnen en la plaza central para jugar con bolas de fuego durante el festival que dura siete días en julio.
+            </div>
+          </div>
+
+          <!-- Fifth Section -->
+          <div class="content-section">
+            <div class="subtitle flex items-center justify-between">
+              <div><i class="fas fa-calendar-alt music-note"></i>Daty i Miejsce</div>
+              <div class="text-sm">Fechas y Lugar</div>
+            </div>
+            <div class="language-label">Polski (PL)</div>
+            <div class="text-content mb-2">
+              Festiwal odbywa się corocznie w lipcu w mieście El Carmen de Bolívar.
+              Trwa tydzień i przyciąga tysiące odwiedzających z całej Kolumbii i zagranicy.
+              Główne wydarzenia mają miejsce wokół głównego placu miasta i pobliskiego kościoła.
+            </div>
+            <div class="language-label">Español (ES)</div>
+            <div class="text-content">
+              El festival se celebra anualmente en julio en la ciudad de El Carmen de Bolívar.
+              Tiene una duración de una semana y atrae a miles de visitantes de toda Colombia y del extranjero.
+              Los eventos principales tienen lugar alrededor de la plaza principal de la ciudad y la iglesia cercana.
             </div>
           </div>
         </div>
