--- a/prezentacja/07.html
+++ b/prezentacja/07.html
@@ -212,18 +212,8 @@
             <img
               alt="Lucho Bermúdez - kolumbijski muzyk i kompozytor"
               class="musician-image"
-              src="https://page.gensparksite.com/slides_images/71bf5e2fc7c2ae2e9ab4ee3b08fddd53.jpg"
+              src="img/WhatsApp Image 2025-10-09 at 19.27.04.jpeg"
             />
-          </div>
-          <div class="mt-4 text-center text-sm text-gray-300">
-            <div>
-              Lucho Bermúdez z instrumentem, pionier nowoczesnej muzyki
-              kolumbijskiej
-            </div>
-            <div>
-              Lucho Bermúdez con su instrumento, pionero de la música colombiana
-              moderna
-            </div>
           </div>
           
           <!-- Additional Image 1 -->
@@ -231,12 +221,8 @@
             <img
               alt="Festival de las Bolas de Candela - uczestnicy"
               class="musician-image"
-              src="https://page.gensparksite.com/slides_images/festival_bolas_candela.jpg"
+              src="img/WhatsApp Image 2025-10-09 at 19.27.04(1).jpeg"
             />
-          </div>
-          <div class="mt-2 text-center text-sm text-gray-300">
-            <div>Uczestnicy Festiwalu de las Bolas de Candela</div>
-            <div>Participantes del Festival de las Bolas de Candela</div>
           </div>
           
           <!-- Additional Image 2 -->
@@ -244,12 +230,8 @@
             <img
               alt="Tradycyjne tańce podczas festiwalu"
               class="musician-image"
-              src="https://page.gensparksite.com/slides_images/tradicional_danza.jpg"
+              src="img/WhatsApp Image 2025-10-09 at 19.27.04(2).jpeg"
             />
-          </div>
-          <div class="mt-2 text-center text-sm text-gray-300">
-            <div>Tradycyjne tańce podczas festiwalu</div>
-            <div>Danzas tradicionales durante el festival</div>
           </div>
         </div>
       </div>
