--- a/prezentacja/01.html
+++ b/prezentacja/01.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="pl" data-theme="light" style=""><head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="navigation.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="navigation.js" defer></script>
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <title>El Carmen de Bolívar: Kontekst geograficzny i historyczny</title>
