--- a/prezentacja/07.html
+++ b/prezentacja/07.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="pl">
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="navigation.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="navigation.js" defer></script>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Lucho Bermúdez: Maestro Karaibskiego Rytmu</title>
