--- a/prezentacja/03.html
+++ b/prezentacja/03.html
@@ -67,6 +67,7 @@
         overflow: hidden;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         margin-bottom: 15px;
+        min-height: 47rem;
     }
     .creature-image {
         width: 100%;
@@ -142,12 +143,10 @@
 </div>
 <div class="language-label">Polski (PL)</div>
 <div class="text-content mb-2">
-    Włochata, potężna istota o czerwonych oczach, Strażnik Rzek i zatopionych skarbów. Kusi kobiety i porywa je, będąc uosobieniem zagrożeń wodnych.
-</div>
+    Włochata, potężna istota o czerwonych oczach, Strażnik Rzek i zatopionych skarbów. Kusi kobiety i porywa je, będąc uosobieniem zagrożeń wodnych. Według legend pojawia się o zmierzchu, przędąc włosy z wodorostów i śpiewając, by zwabić swoje ofiary. Czasami ostrzega też ludzi przed nadchodzącymi burzami, jeśli zostanie potraktowany z szacunkiem.</div>
 <div class="language-label">Español (ES)</div>
 <div class="text-content">
-    Criatura peluda y potente de ojos rojos, el Guardián de los Ríos y los tesoros hundidos. Seduce y rapta mujeres, siendo la personificación de los peligros acuáticos.
-</div>
+    Criatura peluda y potente de ojos rojos, el Guardián de los Ríos y los tesoros hundidos. Seduce y rapta mujeres, siendo la personificación de los peligros acuáticos. Según la leyenda, aparece al anochecer, tejiendo su cabello con algas y cantando para atraer a sus víctimas. A veces también advierte a los humanos de las tormentas que se acercan, si es tratado con respeto.</div>
 </div>
 </div>
 <!-- Right Column - Images -->
