--- a/prezentacja/05.html
+++ b/prezentacja/05.html
@@ -66,9 +66,10 @@
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            height: 120px;
-            width: 120px;
+            height: 380px;
+            width: 380px;
             object-fit: cover;
+            margin-bottom: 10px;
         }
         .language-label {
             font-size: 13px;
@@ -117,7 +118,7 @@
 <!-- Creatures Section -->
 <div class="flex flex-row space-x-6">
 <!-- La Patasola -->
-<div class="creature-container w-1/3">
+<div class="creature-container w-1/2">
 <div class="flex items-center mb-3">
 <img alt="La Patasola" class="creature-image mr-3" src="https://page.gensparksite.com/slides_images/68be819fb1ee8f8fe8ef01a21e9cf9f7.jpg" data-height-listener-added="true">
 <div class="subtitle">La Patasola</div>
@@ -132,7 +133,7 @@
                     </div>
 </div>
 <!-- El Duende -->
-<div class="creature-container w-1/3">
+<div class="creature-container w-1/2">
 <div class="flex items-center mb-3">
 <img alt="El Duende" class="creature-image mr-3" src="https://page.gensparksite.com/slides_images/b32f5c19e85f6bee5e92f3e9d93395a6.webp" data-height-listener-added="true">
 <div class="subtitle">El Duende</div>
