--- a/prezentacja/04.html
+++ b/prezentacja/04.html
@@ -68,6 +68,7 @@
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            min-height: 47rem;
         }
         .legend-image {
             width: 100%;
