--- a/prezentacja/10.html
+++ b/prezentacja/10.html
@@ -59,7 +59,7 @@
         color: #FF9E2C;
     }
     .text-content {
-        font-size: 1.5vw;
+        font-size: 20px;
         font-family: 'Lora', serif;
         line-height: 1.6;
     }
