--- a/prezentacja/09.html
+++ b/prezentacja/09.html
@@ -109,7 +109,7 @@
         @media (min-width: 768px) {
             .image-container {
                 margin: 0;
-                height: 100%;
+                height: 70%;
             }
         }
         .feature-image {
@@ -169,7 +169,7 @@
 <!-- Main Content -->
 <div class="content">
 <!-- Left Column - Text Content -->
-<div class="w-full md:w-7/12 md:pr-8 flex flex-col">
+<div class="w-full flex flex-col h-full">
 <div class="title flex justify-between items-center">
 <div>Dziedzictwo, Które Żyje i Inspiruje</div>
 <div class="text-sm">Un Legado que Permanece Vivo e Inspira</div>
