--- a/prezentacja/index.html
+++ b/prezentacja/index.html
@@ -32,10 +32,7 @@
             padding: 0;
         }
         .bg-pattern {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
+            position: absolute;<div class="w-full md:w-7/12 md:pr-8 flex flex-col" style="height: 70%;">
             height: 100%;
             opacity: 0.15;
             z-index: 0;
@@ -138,13 +135,15 @@
 <div class="content flex flex-col items-center justify-center pt-16">
 <div class="text-center mb-10">
 <div class="language-label">Polski (PL)</div>
-<div class="title">El Carmen de Bolívar: Kolebka Karaibskiej Mitologii i Tradycji</div>
+<div class="title">El Carmen de Bolívar: </div>
+<div class="title">Kolebka Karaibskiej Mitologii i Tradycji</div>
 <div class="subtitle">Podróż przez historię, legendy i rytmy Montes de María</div>
 </div>
 <div class="separator"></div>
 <div class="text-center">
 <div class="language-label">Español (ES)</div>
-<div class="title">El Carmen de Bolívar: Cuna de Mitología y Tradición Caribeña</div>
+<div class="title">El Carmen de Bolívar: </div>
+<div class="title">Cuna de Mitología y Tradición Caribeña</div>
 <div class="subtitle">Un viaje a través de la historia, las leyendas y los ritmos de los Montes de María</div>
 </div>
 <div class="presenter">
