update digital galery

--- a/index.html
+++ b/index.html
@@ -223,6 +223,17 @@
         </div>
     </section>
 
+    <!-- Digital Arts Gallery Section -->
+    <section id="digital-arts" class="gallery-section">
+        <div class="container">
+            <h2 class="fade-up">Digital Arts</h2>
+            <div class="gallery-grid">
+                <!-- Digital Arts gallery items will be loaded dynamically -->
+                <div class="loading-text">Loading gallery...</div>
+            </div>
+        </div>
+    </section>
+
     <!-- Artist Portrait Section -->
     <section id="artist-portrait">
         <div class="container artist-container">
