gallery pl i es

--- a/es.html
+++ b/es.html
@@ -222,6 +222,16 @@
         </div>
     </section>
 
+    <!-- Digital Arts Gallery Section -->
+    <section id="digital-arts" class="gallery-section">
+        <div class="container">
+            <h2 class="fade-up">Arte Digital</h2>
+            <div class="gallery-grid">
+                <!-- Digital Arts gallery items will be loaded dynamically -->
+                <div class="loading-text">Cargando galería...</div>
+            </div>
+        </div>
+    </section>
 
     <!-- Artist Portrait Section -->
     <section id="artist-portrait">
