--- a/pl.html
+++ b/pl.html
@@ -222,6 +222,17 @@
         </div>
     </section>
 
+    <!-- Digital Arts Gallery Section -->
+    <section id="digital-arts" class="gallery-section">
+        <div class="container">
+            <h2 class="fade-up">Sztuka Cyfrowa</h2>
+            <div class="gallery-grid">
+                <!-- Digital Arts gallery items will be loaded dynamically -->
+                <div class="loading-text">Ładowanie galerii...</div>
+            </div>
+        </div>
+    </section>
+
     <!-- Artist Portrait Section -->
     <section id="artist-portrait">
         <div class="container artist-container">
