--- a/prezentacja/index.html
+++ b/prezentacja/index.html
@@ -32,7 +32,7 @@
             padding: 0;
         }
         .bg-pattern {
-            position: absolute;<div class="w-full md:w-7/12 md:pr-8 flex flex-col" style="height: 70%;">
+            position: absolute;
             height: 100%;
             opacity: 0.15;
             z-index: 0;
